Fixed spacing on <pre>

--- a/html/no-cry-blackjack/css/splash.less
+++ b/html/no-cry-blackjack/css/splash.less
@@ -1,3 +1,7 @@
 body {
 	text-align: center;
+	
+	pre {
+		display: inline-block;
+	}
 }
